...
                } label: {
                    Text(LocalizedKeys.SignIn.noAccount)
                    Text(LocalizedKeys.SignIn.signupButtonTitle)
                        .underline()
                }
                .tint(.black)
                .accessibilityIdentifier("registerButton")
            }
        }
        .onChange(of: presentSheet, perform: { newValue in
            if newValue {
                sheetManager.popSheet(model: SheetModelView(presentableContent: getSheetContent()))
                presentSheet = false
...
